# stock-analysis-agent

./: .gitignore  main.py  pyproject.toml
src/agents/: __init__.py  investment_knowledge.py  prompt_template.py  reActAgent.py
src/core/: __init__.py  agent.py  config.py  llm.py
src/llm/: __init__.py
src/mcp/: mcpClient.py  mcpServer.py
src/memory/: __init__.py  database_config.py
src/memory/rag/: __init__.py  pipeline.py
src/memory/storage/: __init__.py  neo4j_store.py
src/memory/types/: semantic.py
src/tools/: __init__.py  registry.py
src/tools/builtin/: memory_tool.py  protocol_tools.py  rag_tool.py
